--- a/css/min/metro.css
+++ b/css/min/metro.css
@@ -571,7 +571,7 @@ circle.selected {
   font-family: "PT_LINK", sans-serif;
   font-size: 20px;
   margin: 10px 0;
-  color: #1a1a1a;
+  color: #b4b4b4;
   text-decoration: none;
 }
 .t-icon-metroln.t-metrostation-list-header:before,
@@ -601,7 +601,7 @@ circle.selected {
   top: 0;
   width: 100%;
   height: 100%;
-  background-color: #fff;
+  background-color: #1d1d1d;
   cursor: default;
   overflow-y: auto;
   overflow-x: hidden;
@@ -631,7 +631,7 @@ circle.selected {
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 20'%3E%3Cg fill='none' stroke='%23000' stroke-linecap='round'%3E%3Cline x1='2' y1='18' x2='18' y2='2'/%3E%3Cline x1='18' y1='18' x2='2' y2='2'/%3E%3C/g%3E%3C/svg%3E") !important;
 }
 .single-station {
-  background-color: rgb(224 243 255);
+  background-color: rgb(22 22 22);
   padding: 0 5px;
 }
 .t-metrostation-list-table .t-icon-metroln {
